--- a/css/main.css
+++ b/css/main.css
@@ -37,9 +37,15 @@ body {
 
 }
 
-.display-area, .buttons-area {
+.display-area {
 
     margin: 5px;
+
+}
+
+.buttons-area {
+
+    margin: 5px 15px;
 
 }
 
@@ -62,6 +68,7 @@ body {
     width: 45px;
     height: 45px;
     background-color: #F3F3F3;
+    margin-bottom: 5px;
     border: 1px solid black;
     border-radius: 10px;
     text-align: center;
@@ -75,13 +82,13 @@ body {
 
 }
 
-#equal {
+.equal {
 
     background-color: #FF8C00;
 
 }
 
-#equal:hover {
+.equal:hover {
 
     background-color: #FFA500;
 
@@ -123,8 +130,8 @@ body {
 
 }
 
-#clear, #equal {
+.all-clear, .equal {
 
-    width: 90px;
+    width: 93.21px;
 
 }
